--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,5 @@ baseURL = 'https://itstarfish.github.io/Zilvinas.github.io/public/'
 languageCode = 'en-us'
 title = 'Žilvino tinklapis'
 theme = 'hugo-PaperMod'
+relativeURLs = true
+canonifyURLs = true
